# chess_game

./: .gitignore  LICENSE  README.md
chess/: CMakeLists.txt  CMakeSettings.json  chess.sln  premake5.lua
chess/Release/: chess.iobj  chess.ipdb
chess/bin_obj/Debug-windows-x86_64/chess/: chess.exe.recipe  vc142.idb
chess/bin_obj/Debug-windows-x86_64/chess/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/bin_obj/Release-windows-x86_64/chess/: chess.exe.recipe
chess/bin_obj/Release-windows-x86_64/chess/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/chess/: CMakeLists.txt  chess.vcxproj  chess.vcxproj.filters
chess/chess/Debug/: chess.exe.recipe  vc142.idb
chess/chess/Debug/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/chess/Release/: chess.exe.recipe
chess/chess/Release/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess.lastbuildstate  chess.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/chess/src/: Bot.cpp  Bot.h  Chess.cpp  Chess.h  Main.cpp  Player.cpp  Player.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  chess_set.h
